Fix dark mode styles of txDetails and register multisig

--- a/src/components/screens/multiSignature/editor/styles.css
+++ b/src/components/screens/multiSignature/editor/styles.css
@@ -59,6 +59,7 @@
 
     display: flex;
     align-items: center;
+    color: var(--color-maastricht-blue);
   }
 }
 
