--- a/src/components/shared/multiSignatureReview/styles.css
+++ b/src/components/shared/multiSignatureReview/styles.css
@@ -25,6 +25,7 @@
 
   & > p {
     width: 100%;
+    color: var(--color-maastricht-blue);
   }
 
   & > div {
@@ -79,10 +80,12 @@
   @mixin contentNormal semi-bold;
 
   margin-bottom: 10px;
+  color: var(--color-maastricht-blue);
 }
 
 .infoValue {
   @mixin contentNormal;
 
   font-size: 16px;
+  color: var(--color-maastricht-blue);
 }
